[gd_scene load_steps=4 format=4 uid="uid://cgq3k5vg4kvud"]

[ext_resource type="Script" uid="uid://c633ipxb1n20j" path="res://scenes/hack_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://j7ija2tj0xsn" path="res://textures/icons/hacker.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bl6qjqtdhgw8p" path="res://textures/icons/breach.png" id="3"]

[node name="HackPanel" type="Panel"]
custom_minimum_size = Vector2(0, 140)
anchor_right = 1.0
offset_bottom = 140.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="RequirementPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(120, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"

[node name="RequirementContainer" type="VBoxContainer" parent="RequirementPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Icon" type="TextureRect" parent="RequirementPanel/RequirementContainer"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="Level" type="Label" parent="RequirementPanel/RequirementContainer"]
layout_mode = 2
text = "Lv 1"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 140.0
offset_top = -54.0
offset_right = -20.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MainInfoContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Icon" type="TextureRect" parent="InfoContainer/MainInfoContainer"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3")
expand_mode = 1

[node name="Name" type="Label" parent="InfoContainer/MainInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Corporation Breaching"

[node name="Description" type="Label" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_spacing = -4
theme_override_font_sizes/font_size = 24
text = "Unlocks the ability to breach corporations and steal secret data"
vertical_alignment = 1
autowrap_mode = 3
